--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -217,7 +217,7 @@
     }
 
     .olMap {
-        background-color: #CDD2D4;
+        background-color: #242424;
         border: @border;
         border-radius: 0 0 4px 4px;
         width: auto !important;
