--- a/app/css/style.less
+++ b/app/css/style.less
@@ -849,7 +849,7 @@ tr.borderedRow {
         > tr {
             &:nth-child(2n+1) {
                 > td, > th {
-                    background-color: @main-background;
+                    background-color: @visualization-box-background;
                 }
             }
         }
