--- a/app/css/variables-dark-green.less
+++ b/app/css/variables-dark-green.less
@@ -21,12 +21,12 @@
 @visualization-box-background: #1B313D;
 
 // General accent colors to highlight areas of tables or visualizations
-@accent-bright: #A654A1;
-@accent-light: #B585B4;
-@accent-dark: #854683;
-@accent-dulled: #CEB3CE;
+@accent-bright: #39B54A;
+@accent-light: #7C398E;
+@accent-dark: #82F9F3E;
+@accent-dulled: #88D292;
 @accent-lightest: #E0D5E0;
-@callout: #FEF59C;
+@callout: goldenrod;
 
 // Text colors to contrast well against accent colored backgrounds.
 @accent-dulled-text-color: #000000;
