--- a/app/css/variables-light-green.less
+++ b/app/css/variables-light-green.less
@@ -13,27 +13,27 @@
 // limitations under the License.
 //
 
-@main-background: #0B0D0D;
+@main-background: #F1F1F1;
 @main-background-lighten: lighten(@main-background, 4%);
 @main-background-darken: darken(@main-background, 6%);
-@light-background: #1B313D;
+@light-background: #FFFFFF;
 @mid-background: #314551;
-@visualization-box-background: #1B313D;
+@visualization-box-background: #F1F1F1;
 
 // General accent colors to highlight areas of tables or visualizations
-@accent-bright: #A654A1;
-@accent-light: #B585B4;
-@accent-dark: #854683;
-@accent-dulled: #CEB3CE;
+@accent-bright: #39B54A;
+@accent-light: #7C398E;
+@accent-dark: #82F9F3E;
+@accent-dulled: #88D292;
 @accent-lightest: #E0D5E0;
 @callout: #FEF59C;
 
 // Text colors to contrast well against accent colored backgrounds.
 @accent-dulled-text-color: #000000;
 
-@main-text-color: #85949C;
+@main-text-color: #777777;
 @light-text-color: #FFFFFF;
-@mid-text-color: darken(@main-text-color, 10%);
+@mid-text-color: darken(@main-text-color, 50%);
 
 
 @error-text-color: #AA1E13;
@@ -48,7 +48,7 @@
 @shadow-border: 0px solid @shadow;
 
 @button-border-color: #787878;
-@button-color: #E0D5E0;
+@button-color: #EEEEEE;
 
 @chart-text-color: @main-text-color;
 @chart-axis-color: @main-text-color;
