--- a/app/partials/directives/optionsMenu.html
+++ b/app/partials/directives/optionsMenu.html
@@ -8,7 +8,7 @@
         <div class="arrow"></div>
         <div class="popover-content">
             <div ng-transclude></div>
-            <div class="form-group" ng-show="exportFunction !== undefined">
+            <div class="form-group" ng-show="exportFunction !== undefined && showExport">
                 <div class="input-group">
                     <button type="button" class="btn btn-default export" ng-click="requestExport()">
                         Export to File
