--- a/app/css/directives/barchart.less
+++ b/app/css/directives/barchart.less
@@ -21,7 +21,8 @@
     .barchart {
         margin: 0 0 0;
         min-height: 50px;
-        overflow: hidden;
+        overflow-x: auto;
+        overflow-y: hidden;
 
         svg {
             font-size: 10px;
@@ -165,7 +166,6 @@
             text-align: right;
             display: block;
             margin: auto;
-            width: 100%;
             height: 100%;
         }
     }
