NEON-1708 Restyling all tooltips to make consistent

--- a/app/css/directives/sunburst.less
+++ b/app/css/directives/sunburst.less
@@ -71,11 +71,14 @@
 
 .sunburst-tooltip-title {
     font-weight: bold;
-    font-size: 18px;
+    font-size: 14px;
+    margin-bottom: 5px;
+    color: #39b54a;
 }
 
 .sunburst-tooltip-field {
-    font-weight: bold;
+    font-weight: normal !important;
+    color: @mid-text-color !important;
 }
 
 .sunburst-transient-breadcrumb {
