NEON-1725 NEON-1742 The newsfeed can now query for and display its own data.  Newsfeeds only respond to news and news-highlights events that have their own feed name which can be configured in the configuration file either as table mappings or data bindings for graph and newsfeed visualizations.  Newsfeeds only show their first 100 results and load more as the user scrolls down; the order of results can be changed through buttons in the options menu.

--- a/app/css/directives/newsfeed.less
+++ b/app/css/directives/newsfeed.less
@@ -13,11 +13,14 @@
 // limitations under the License.
 //
 
-.newsfeed {
+.newsfeed-directive {
     height: @widget-height;
     width: @widget-width;
-    overflow: auto;
     padding: 10px;
+
+    .newsfeed {
+        overflow: auto;
+    }
 
     .item {
         color: @mid-text-color;
@@ -49,6 +52,10 @@
 
         .date {
             color: @main-text-color;
+        }
+
+        .text {
+            word-wrap: break-word;
         }
     }
 }
