--- a/app/partials/directives/filterBuilder.html
+++ b/app/partials/directives/filterBuilder.html
@@ -1,5 +1,5 @@
 <div class="header-container header-container-large">
-    <span class="count text-primary pull-left">Filter Builder</span>
+    <span class="header-text title pull-left">Filter Builder</span>
 
     <div class="pull-right">
       <div class="btn-group" >
