NEON-1712 Reformat date picker on timeline

--- a/app/css/directives/timelineSelector.less
+++ b/app/css/directives/timelineSelector.less
@@ -84,6 +84,22 @@
     }
 
     .neon-datetimepicker {
+        margin-top: 10px;
+
+        .dropdown-toggle {
+            cursor: pointer;
+            font-family: "Open Sans", Helvetica, arial, sans-serif;
+            color: @main-text-color;
+            font-size: 16px;
+
+            &:hover {
+                color: goldenrod;
+            }
+
+            * {
+                margin-right: 5px;
+            }
+        }
 
         .dropdown-menu {
             /* Match the width of two datetimepickers plus margin/padding/scrollbar. */
