Fix a few errors

--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -82,10 +82,10 @@
             <label>Animation Controls</label>
             <div class="btn-group">
                 <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.showAnimationControls]">
-                    <input type="radio" style="display:none" ng-model="options.showAnimationControls" value="true"> Show
+                    <input type="radio" style="display:none" ng-model="options.showAnimationControls" ng-value="true"> Show
                 </label>
                 <label class="btn btn-default" ng-class="{true: '', false: 'active'}[options.showAnimationControls]">
-                    <input type="radio" style="display:none" ng-model="options.showAnimationControls" value="false"> Hide
+                    <input type="radio" style="display:none" ng-model="options.showAnimationControls" ng-value="false"> Hide
                 </label>
             </div>
             <div class="clearfix"></div>
