Cleanup of gantt chart directive.  No behavioral changes.

--- a/app/css/directives/gantt-chart.less
+++ b/app/css/directives/gantt-chart.less
@@ -1,11 +1,11 @@
 .gantt-chart-directive {
-    margin: auto;
-    padding: 10px;
-    display: block;
-    overflow: scroll;
     height: 100%;
+    overflow: scroll;
+    padding: 10px;
 
-    /*.gantt-task-content {
-        background-color: #39b54a;
-    }*/
+    .gantt-task-content {
+        span {
+            margin: 0px;
+        }
+    }
 }
