NEON-1753 Fixed a major bug in the timeline in which one would not size itself correctly in layouts containing multiple timelines.  Also fixed some general bugs with resizing timelines.

--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -157,7 +157,7 @@
 </div>
 
 <div class="collapsed" ng-class="{true: 'collapsed', false: ''}[options.collapsed]" ng-hide="noData">
-    <div timeline-selector-chart timeline-data='data' timeline-brush='brush' collapsed='options.collapsed' extent-dirty='extentDirty'
+    <div timeline-selector-chart timeline-element='element' timeline-data='data' timeline-brush='brush' collapsed='options.collapsed' extent-dirty='extentDirty'
         primary-series='options.primarySeries' granularity='options.granularity' show-focus='options.showFocus'></div>
 </div>
 
