NEON-1754 Added data bindings to the Timeline and Line Chart for setting the default granularity through the configuration file.

--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -53,7 +53,7 @@
               <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.granularity === 'month']">
                 <input type="radio" style="display:none" ng-model="options.granularity" value="month"> Month
               </label>
-              <label class="btn btn-default active" ng-class="{true: 'active', false: ''}[options.granularity === 'day']">
+              <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.granularity === 'day']">
                 <input type="radio" style="display:none" ng-model="options.granularity" value="day"> Day
               </label>
               <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.granularity === 'hour']">
