--- a/app/partials/directives/linechart.html
+++ b/app/partials/directives/linechart.html
@@ -41,7 +41,7 @@
         <div class="form-group">
             <label>Date Granularity</label>
             <div class="btn-group">
-              <label class="btn btn-default active" ng-class="{true: 'active', false: ''}[options.granularity === 'day']">
+              <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.granularity === 'day']">
                 <input type="radio" style="display:none" ng-model="options.granularity" value="day"> Day
               </label>
               <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.granularity === 'hour']">
