--- a/app/partials/directives/newsfeed.html
+++ b/app/partials/directives/newsfeed.html
@@ -43,14 +43,25 @@
 
         <div class="form-group">
             <label>Sort By Date</label>
+            <div class="btn-group">
+                <label class="btn btn-default active" ng-class="{true: 'active', false: ''}[options.sortDirection === ASCENDING]">
+                    <input type="radio" ng-model="options.sortDirection" style="display:none" ng-value="ASCENDING" ng-change="handleAscButtonClick()">ASC
+                </label>
+                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.sortDirection === DESCENDING]">
+                    <input type="radio" ng-model="options.sortDirection" style="display:none" ng-value="DESCENDING" ng-change="handleDescButtonClick()">DESC
+                </label>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+
+        <div class="form-group">
+            <label>News Limit</label>
             <div class="input-group">
+                <input type="number" min="1" class="form-control" ng-model="options.limit" required>
                 <div class="input-group-btn">
-                    <label class="btn btn-default active" ng-class="{true: 'active', false: ''}[options.sortDirection === ASCENDING]">
-                        <input type="radio" ng-model="options.sortDirection" style="display:none" ng-value="ASCENDING" ng-change="handleAscButtonClick()">ASC
-                    </label>
-                    <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.sortDirection === DESCENDING]">
-                        <input type="radio" ng-model="options.sortDirection" style="display:none" ng-value="DESCENDING" ng-change="handleDescButtonClick()">DESC
-                    </label>
+                    <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="onFieldChanged()">
+                        <span class="glyphicon glyphicon-refresh"></span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -60,9 +71,9 @@
 <div class="clearfix"></div>
 
 <div class="newsfeed">
-	<div class="item" ng-class="getNewsItemStyleClass(item)" ng-repeat='item in data.newsSubset'>
+	<div class="item" ng-class="getNewsItemStyleClass(item)" ng-repeat='item in data.news'>
         <div>
-            <img class="image" src="img/Twitter.png" ng-if="data.type == 'TWITTER'">
+            <img class="image" src="img/Twitter.png" ng-if="feedType == 'TWITTER'">
             <span class="head" ng-if="item.head != undefined" ng-bind="item.head"></span>
             <span class="name" ng-if="item.name != undefined" ng-bind="item.name"></span>
         </div>
