--- a/app/css/directives/tagCloud.less
+++ b/app/css/directives/tagCloud.less
@@ -39,6 +39,23 @@
     overflow-x: hidden;
     overflow-y: auto;
     padding: 10px;
+
+    .chart-options {
+        .translate {
+            margin-left: 15px;
+
+            .sub-input-group {
+                display: flex;
+                margin-bottom: 7px;
+
+                label {
+                    margin-right: 10px;
+                    padding-top: 7px;
+                    min-width: 35px;
+                }
+            }
+        }
+    }
 }
 
 
