--- a/app/css/directives/directedGraph.less
+++ b/app/css/directives/directedGraph.less
@@ -41,33 +41,22 @@
 }
 
 .graph-tooltip {
-    border-radius: 4px;
-    color: @light-text-color;
+    color: @accent-bright;
     font-size: 15px;
     font-weight: bold;
-    padding: 0px 5px 5px;
-    pointer-events: none;
-    white-space: nowrap;
-    z-index: 1060;
 
     .graph-tooltip-block {
         line-height: 30px;
         text-align: center;
 
-        .graph-tooltip-label {
-            color: #ddd;
-            display: inline-block !important;
-        }
-
         .graph-tooltip-value {
             font-size: 22px;
             position: relative;
-            top: 2px;
-            display: inline-block !important;
+            top: -1px;
         }
 
         .graph-tooltip-label+.graph-tooltip-value {
-            margin-left: 5px;
+            padding-left: 5px;
         }
     }
 }
