NEON-1763 Changed the import/export options menu in the navbar to a dropdown menu to mimic the style of the other navbar menus.

--- a/app/partials/directives/exportWidgets.html
+++ b/app/partials/directives/exportWidgets.html
@@ -1,7 +1,3 @@
-<ul class="nav navbar-nav export-widgets-button">
-	<li>
-		<a class="navbar-nav collapsed dropdown-toggle primary neon-popup-button" ng-click="exportAll()">
-		  Export All Widgets
-		</a>
-	</li>
-</ul>
+<a href="#" ng-click="exportAll()">
+  Export All Visualizations
+</a>
