NEON-1323 Keep translation on filter change and query. Move translation options to its own directive. Retrieve all supported languages in rest call. Add comments.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -1062,3 +1062,15 @@ tr.borderedRow {
 #removeDatasetModal {
     font-weight: normal;
 }
+
+label.translate-checkbox {
+    margin-left: 5px;
+
+    &.disabled {
+        opacity: .65;
+    }
+}
+
+input.translate-checkbox {
+    cursor: pointer;
+}
