--- a/app/css/directives/tagCloud.less
+++ b/app/css/directives/tagCloud.less
@@ -56,6 +56,12 @@
             }
         }
     }
+
+    .filter-container {
+        .filter-label {
+            max-width: none;
+        }
+    }
 }
 
 
