--- a/app/partials/directives/tagCloud.html
+++ b/app/partials/directives/tagCloud.html
@@ -31,42 +31,20 @@
             </div>
             <div class="clearfix"></div>
         </div>
-        <div class="form-group">
-            <label>Translate Text</label>
-            <div class="input-group translate">
-                <div class="sub-input-group">
-                    <label>From</label>
-                    <select class="form-control" ng-model="options.translate.fromLanguageField"
-                        ng-options="langCode as langName for (langCode, langName) in translationLanguages.fromLanguageOptions"
-                        ng-required="false">
-                        <option value="" selected="selected">Detect</option>
-                    </select>
-                </div>
-                <div class="sub-input-group">
-                    <label>To</label>
-                    <select class="form-control" ng-model="options.translate.toLanguageField"
-                        ng-options="langCode as langName for (langCode, langName) in translationLanguages.toLanguageOptions" ng-required="true">
-                    </select>
-                </div>
-                <button type="button" class="btn btn-default"
-                    ng-click="translate(options.translate.fromLanguageField, options.translate.toLanguageField)">
-                    Translate
-                </button>
-                <button type="button" class="btn btn-default" ng-click="resetTranslation()">
-                    Reset
-                </button>
-            </div>
-            <div class="clearfix"></div>
-        </div>
+        <translation-options from-language-field="options.translate.fromLanguageField" to-language-field="options.translate.toLanguageField"
+            from-language-options="translationLanguages.fromLanguageOptions" to-language-options="translationLanguages.toLanguageOptions"
+            show-translation="options.showTranslation">
+        </translation-options>
     </options-menu>
 </div>
 
 <div class="clearfix"></div>
 
 <div class="header-container filter-container" ng-show="(filterTags.length > 0)">
-    <div class="header-item filter-reset pull-right" ng-repeat="tag in filterTags" title="{{options.tagField.prettyName}}={{tag.name}}">
-        <span class="filter-label" ng-bind="tag.name" ng-show="!usingTranslation"></span>
-        <span class="filter-label" ng-bind="tag.nameTranslated" ng-show="usingTranslation"></span>
+    <div class="header-item filter-reset pull-right" ng-repeat="tag in filterTags"
+        title="{{options.tagField.prettyName}}={{options.showTranslation ? tag.nameTranslated : tag.name}}">
+        <span class="filter-label" ng-bind="tag.name" ng-show="!options.showTranslation"></span>
+        <span class="filter-label" ng-bind="tag.nameTranslated" ng-show="options.showTranslation"></span>
         <span class="glyphicon glyphicon-remove" ng-click="removeFilter(tag.name)"></span>
     </div>
 </div>
@@ -74,6 +52,6 @@
 <div class="clearfix"></div>
 
 <div class="tagcloud" ng-show="filterTags.length > 0 || data.length > 0">
-    <a ng-click="addTagFilter(tagCount.key)" class="tag" ng-repeat="tagCount in data" rel="{{tagCount.count}}" title="Count:  {{tagCount.count}}" ng-bind="tagCount.key" ng-show="!usingTranslation"></a>
-    <a ng-click="addTagFilter(tagCount.key)" class="tag" ng-repeat="tagCount in data" rel="{{tagCount.count}}" title="Count:  {{tagCount.count}}" ng-bind="tagCount.keyTranslated" ng-show="usingTranslation"></a>
+    <a ng-click="addTagFilter(tagCount.key, tagCount.keyTranslated)" class="tag" ng-repeat="tagCount in data" rel="{{tagCount.count}}" title="Count:  {{tagCount.count}}" ng-bind="tagCount.key" ng-show="!options.showTranslation"></a>
+    <a ng-click="addTagFilter(tagCount.key, tagCount.keyTranslated)" class="tag" ng-repeat="tagCount in data" rel="{{tagCount.count}}" title="Count:  {{tagCount.count}}" ng-bind="tagCount.keyTranslated" ng-show="options.showTranslation"></a>
 </div>
