--- a/app/partials/directives/translationOptions.html
+++ b/app/partials/directives/translationOptions.html
@@ -16,8 +16,12 @@
                 ng-required="true">
             </select>
         </div>
-        <input class="translate-checkbox" type="checkbox" ng-model="showTranslation" ng-value="true" ng-disabled="!toLanguageField">
-        <label class="translate-checkbox" ng-class="{true: 'disabled', false: ''}[!toLanguageField]">Show translation</label>
+        <input class="translate-checkbox" type="checkbox" ng-model="showTranslation"
+            ng-value="true" ng-disabled="!toLanguageField || disableTranslate">
+        <label class="translate-checkbox"
+            ng-class="{true: 'disabled', false: ''}[!toLanguageField || disableTranslate]">
+            Show translation
+        </label>
     </div>
     <div class="clearfix"></div>
 </div>
