NEON-1762 Added configuration options to specify external application services that are used (currently) by the aggregation table to create external application links.  Cleaned up the links popup code.  Changed the parameter service to support an unlimited number of custom mappings.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -402,6 +402,15 @@ button {
     }
 }
 
+.disabled {
+    pointer-events: none;
+    opacity: .65;
+
+    .glyphicon {
+        color: #999;
+    }
+}
+
 .filter-reset {
     margin-right: 0px;
     margin-left: 5px;
