--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -229,6 +229,26 @@
         td, th {
             padding: 2px;
         }
+
+        .link-div {
+            /* Align under the olPopupCloseBox. */
+            position: absolute;
+            right: 13px;
+            top: 70px;
+            z-index: 1;
+
+            .link-btn {
+                /* Ensure the width matches the width of the olPopupCloseBox. */
+                padding: 1px;
+                line-height: 12px;
+
+                .glyphicon {
+                    color: #333;
+                    font-size: 11px;
+                    font-weight: bold;
+                }
+            }
+        }
     }
 
     .olControlAttribution {
@@ -252,13 +272,6 @@
                 background-color: @accent-bright;
                 opacity: 1;
             }
-        }
-    }
-
-    .olControlAttribution {
-        
-        a {
-            pointer-events: none;
         }
     }
 }
