NEON-1690 converting top options menu icon to glyphicon

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -13,11 +13,22 @@
 // limitations under the License.
 //
 
-@import 'variables.less';
+@import 'variables-light-green.less';
 
 .no-margin {
     margin-left: 0px !important;
     margin-right: 0px !important;
+}
+
+.options {
+    .options-gear {
+        vertical-align: middle;
+        font-size: 34px;
+    }
+
+    .options-text {
+        vertical-align: middle;
+    }
 }
 
 @import 'errorStyle.less';
