NEON-1690 restyling top bar and add vis image backgrounds

--- a/app/css/directives/addVisualization.less
+++ b/app/css/directives/addVisualization.less
@@ -23,6 +23,10 @@
         padding: 10px;
         width: 400px;
     }
+
+    .add-visualization-image {
+        background-color: @visualization-box-background;
+    }
 }
 
 .add-visualization-button{
