--- a/app/css/variables-dark-purple.less
+++ b/app/css/variables-dark-purple.less
@@ -68,3 +68,5 @@
 // Background colors to go behind map panes.
 @light-map-background: #CDD2D4;
 @dark-map-background: #242424;
+
+@powered-by-neon-image: url('../img/Neon_Logo_Gray.svg');
