--- a/app/partials/directives/poweredByNeon.html
+++ b/app/partials/directives/poweredByNeon.html
@@ -1,6 +1,9 @@
-<a data-toggle="modal" data-target="#aboutNeonModal" class="navbar-text neon-popup-button pull-right" ng-click="loadNeonInfo()">
-  Powered by <img class="brand-image" src="img/Neon_60x34.png"></img>
-</a>
+<div class="powered-by-neon">
+  <a data-toggle="modal" data-target="#aboutNeonModal" class="navbar-text neon-popup-button pull-right" ng-click="loadNeonInfo()">
+    <span class="brand-text">Powered by </span>
+    <div class="brand-image"></div>
+  </a>
+</div>
 
 <div class="modal fade neon-popup" id="aboutNeonModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
