--- a/app/css/app.less
+++ b/app/css/app.less
@@ -13,7 +13,17 @@
 // limitations under the License.
 //
 
-@import 'variables-light-green.less';
+@import 'variables-dark-purple.less';
+
+html {
+    color: @main-text-color;
+
+    .navbar-default {
+        .navbar-text {
+            color: @main-text-color;
+        }
+    }
+}
 
 .no-margin {
     margin-left: 0px !important;
@@ -23,7 +33,8 @@
 .options {
     .options-gear {
         vertical-align: middle;
-        font-size: 34px;
+        font-size: 22px;
+        padding-top: 4px;
     }
 
     .options-text {
@@ -51,6 +62,7 @@
 @import 'directives/linechart.less';
 @import 'directives/map.less';
 @import 'directives/newsfeed.less';
+@import 'directives/poweredByNeon.less';
 @import 'directives/queryResultsTable.less';
 @import 'directives/sample.less';
 @import 'directives/stackedBarChart.less';
