--- a/app/partials/directives/translationOptions.html
+++ b/app/partials/directives/translationOptions.html
@@ -3,7 +3,7 @@
     <div class="input-group translate">
         <div class="sub-input-group">
             <label>From</label>
-            <select class="form-control" ng-model="fromLanguageField"
+            <select class="form-control" ng-model="fromLanguageField" ng-change="fromLanguageChange(fromLanguageField)"
                 ng-options="langCode as langName for (langCode, langName) in fromLanguageOptions"
                 ng-required="false">
                 <option value="" selected="selected">Detect</option>
@@ -11,12 +11,13 @@
         </div>
         <div class="sub-input-group">
             <label>To</label>
-            <select class="form-control" ng-model="toLanguageField"
+            <select class="form-control" ng-model="toLanguageField" ng-change="toLanguageChange(toLanguageField)"
                 ng-options="langCode as langName for (langCode, langName) in toLanguageOptions"
                 ng-required="true">
             </select>
         </div>
         <input class="translate-checkbox" type="checkbox" ng-model="showTranslation"
+            ng-change="onTranslate(showTranslation, fromLanguageField, toLanguageField)"
             ng-value="true" ng-disabled="!toLanguageField || disableTranslate">
         <label class="translate-checkbox"
             ng-class="{true: 'disabled', false: ''}[!toLanguageField || disableTranslate]">
