--- a/app/css/app.less
+++ b/app/css/app.less
@@ -47,4 +47,5 @@
 @import 'directives/tagCloud.less';
 @import 'directives/timelineSelector.less';
 @import 'directives/timelineSelectorChart.less';
+@import 'directives/translationOptions.less';
 @import 'directives/visualizationWidget.less';
